k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx" # tell k8s we want to create an ingress controller
    nginx.ingress.kubernetes.io/use-regex: "true" # address certain 404 errors on localhost and Google Cloud
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: "/?(.*)"
            backend:
              service:
                name: client-service
                port:
                  number: 3000
          - pathType: Prefix
            path: "/api/?(.*)"
            backend:
              service:
                name: api-service
                port:
                  number: 5000
